@@ -8,6 +8,11 @@
  * under the GNU GPL. See README and COPYING for details.
  */
 
+// Sanity check whether .htaccess basic authentication is configured correctly
+if (!$_SERVER['REMOTE_USER'] || $_SERVER['AUTH_TYPE'] != "Basic") {
+	die("Authentication not enabled, check .htaccess and AllowOverride");
+}
+
 require_once('../../etc/config.php');
 
 if( DEBUG ) {
