@@ -4,6 +4,7 @@ Version 2.2.0 - SVN
 -------------------
  - Do not install domjudge straight in $HOME by default
  - Do not download stuff from external websites without asking
+ - Add sanity check in jury interface whether basic authentication is enabled
 
 Version 2.1.1 - SVN
 -------------------
